style(visualizer): fix too large width of table and chart

--- a/visualizer/src/App.css
+++ b/visualizer/src/App.css
@@ -10,7 +10,12 @@ body {
 
 #latest-data {
   display: grid;
+  gap: 0.5rem;
   grid-template-columns: 1fr 1fr;
+
+  @media screen and (max-width: 30rem) {
+    grid-template-columns: 1fr;
+  }
 
   .value {
     font-size: 1.5rem;
@@ -19,11 +24,24 @@ body {
 
   & > div {
     list-style: none;
-    width: 20rem;
-    margin: 0.5rem;
     padding: 0.5rem;
     background: #ffd8e5;
     border: solid 3px #ff9abc;
     border-radius: 0.5rem;
   }
+}
+
+.chart {
+  max-width: min(90vw, 1280px);
+  height: 28rem;
+
+  & iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.table {
+  max-width: min(90vw, 1280px);
+  overflow-x: scroll;
 }
